@@ -1,6 +1,7 @@
 /* Copyright (c) Jython Developers */
 package org.python.core;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.Map;
@@ -42,15 +43,81 @@ public class ClasspathPyImporter extends importer<String> {
         this.path = path;
     }
 
+    /**
+     * Return the contents of the jarred file at the specified path
+     * as bytes.
+     *
+     * @param path a String path name within the archive
+     * @return a String of data in binary mode (no CRLF)
+     */
+    @Override
     public String get_data(String path) {
-        InputStream is = entries.get(makeEntry(path.replace("__pyclasspath__/", "")));
-        byte[] data;
-        try {
-            data = FileUtil.readBytes(is);
+        return ClasspathPyImporter_get_data(path);
+    }
+
+    @ExposedMethod
+    final String ClasspathPyImporter_get_data(String path) {
+        // Strip any leading occurrence of the hook string
+        int len = PYCLASSPATH_PREFIX.length();
+        if (len < path.length() && path.startsWith(PYCLASSPATH_PREFIX)) {
+            path = path.substring(len);
+        }
+
+        // Bundle wraps the stream together with a close operation
+        try (Bundle bundle = makeBundle(path, makeEntry(path))) {
+            byte[] data = FileUtil.readBytes(bundle.inputStream);
+            return StringUtil.fromBytes(data);
         } catch (IOException ioe) {
             throw Py.IOError(ioe);
         }
-        return StringUtil.fromBytes(data);
+    }
+
+    /**
+     * Return the source code for the module as a string (using
+     * newline characters for line endings)
+     *
+     * @param fullname the fully qualified name of the module
+     * @return a String of the module's source code or null
+     */
+    public String get_source(String fullname) {
+        return ClasspathPyImporter_get_source(fullname);
+    }
+
+    @ExposedMethod
+    final String ClasspathPyImporter_get_source(String fullname) {
+
+        ModuleInfo moduleInfo = getModuleInfo(fullname);
+
+        if (moduleInfo == ModuleInfo.ERROR) {
+            return null;
+
+        } else if (moduleInfo == ModuleInfo.NOT_FOUND) {
+            throw Py.ImportError(String.format("can't find module '%s'", fullname));
+
+        } else {
+            // Turn the module name into a source file name
+            String path = makeFilename(fullname);
+            if (moduleInfo == ModuleInfo.PACKAGE) {
+                path += File.separator + "__init__.py";
+            } else {
+                path += ".py";
+            }
+
+            // Bundle wraps the stream together with a close operation
+            try (Bundle bundle = makeBundle(path, makeEntry(path))) {
+                InputStream is = bundle.inputStream;
+                if (is != null) {
+                    byte[] data = FileUtil.readBytes(is);
+                    return StringUtil.fromBytes(data);
+                } else {
+                    // we have the module, but no source
+                    return null;
+                }
+            } catch (IOException ioe) {
+                throw Py.IOError(ioe);
+            }
+        }
+
     }
 
     /**
@@ -126,14 +193,18 @@ public class ClasspathPyImporter extends importer<String> {
 
     @Override
     protected String makeEntry(String filename) {
+        // In some contexts, the resource string arrives as from os.path.join(*parts)
+        if (!getSeparator().equals(File.separator)) {
+            filename = filename.replace(File.separator, getSeparator());
+        }
         if (entries.containsKey(filename)) {
             return filename;
         }
         InputStream is;
         if (Py.getSystemState().getClassLoader() != null) {
-        	is = tryClassLoader(filename, Py.getSystemState().getClassLoader(), "sys");
+            is = tryClassLoader(filename, Py.getSystemState().getClassLoader(), "sys");
         } else {
-        	is = tryClassLoader(filename, imp.getParentClassLoader(), "parent");
+            is = tryClassLoader(filename, imp.getParentClassLoader(), "parent");
         }
         if (is != null) {
             entries.put(filename, is);
